[tool.poetry]
name = "ModernBert_finetune"
version = "0.1.0"
description = "A BERT text classification project using PyTorch Lightning"
authors = ["fatimaezzahre.1@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
transformers = ">=4.30.0"
pytorch-lightning = ">=2.0.0"
numpy = ">=1.26.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.0.0"
tqdm = ">=4.65.0"
torchmetrics = ">=0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
